@@ -43,12 +43,6 @@ limitations under the License.
 
             <dt class="similarity">Similarity:</dt>
 
-            <dt class="properties">Properties:</dt>
-
-            <dt class="schema">Schema:</dt>
-
-            <dt class="index">Index:</dt>
-
             <dt class="position-increment-gap"><abbr title="Position Increment Gap">PI Gap</abbr>:</dt>
 
             <dt class="docs">Docs:</dt>
@@ -56,6 +50,24 @@ limitations under the License.
             <dt class="distinct">Distinct:</dt>
                         
           </dl>
+
+          <table class="flags" cellspacing="0" cellpadding="0" border="0">
+
+            <thead>
+
+              <tr>
+
+                <td>Flags:</td>
+
+              </tr>
+
+            </thead>
+
+            <tbody>
+
+            </tbody>
+
+          </table>
 
           <ul class="analyzer">
             <li class="clearfix index">
